...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="100">

            <TextView
                android:id="@+id/modeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="5"
                android:text="Mode"
                android:textColor="@color/CardViewTextColor"
...
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:gravity="center"
                                card_view:srcCompat="@drawable/air_pressure" />

                            <TextView
                                android:id="@+id/modeAirp"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="1500 lux"
...
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:gravity="center"
                                card_view:srcCompat="@drawable/humidity" />

                            <TextView
                                android:id="@+id/modeHum"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="1000"
...
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:gravity="center"
                                card_view:srcCompat="@drawable/light" />

                            <TextView
                                android:id="@+id/modeLux"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="Settings"
...
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:gravity="center"
                                card_view:srcCompat="@drawable/temp" />

                            <TextView
                                android:id="@+id/modeTemp"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="22 C"
...
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:gravity="center"
                                card_view:srcCompat="@drawable/speaker" />

                            <TextView
                                android:id="@+id/modeVolume"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="28 C"
...
                android:layout_gravity="center_horizontal"
                android:layout_weight="5"
                android:orientation="horizontal"
                android:weightSum="2">

                <ImageView
                    android:id="@+id/editBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    card_view:srcCompat="@drawable/edit" />

                <ImageView
                    android:id="@+id/deleteBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:onClick="DeleteMode"
                    card_view:srcCompat="@drawable/delete" />
...
