...
                            android:layout_height="match_parent"
                            android:text="Name: "
                            android:textColor="@color/CardViewTextColor"
                            android:textSize="30dp" />

                        <EditText
                            android:id="@+id/editName"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="100dp"
                            android:background="@color/EditModeColor"
                            android:inputType="text"
                            android:textColor="@color/CardViewTextColor"
...
                            android:layout_height="match_parent"
                            android:text="Air pressure: "
                            android:textColor="@color/CardViewTextColor"
                            android:textSize="35dp" />

                        <EditText
                            android:id="@+id/editAirp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="8dp"
                            android:background="@color/EditModeColor"
                            android:inputType="text"
                            android:textColor="@color/CardViewTextColor"
...
                            android:layout_height="match_parent"
                            android:text="Humidity: "
                            android:textColor="@color/CardViewTextColor"
                            android:textSize="30dp" />

                        <EditText
                            android:id="@+id/editHum"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="55dp"
                            android:background="@color/EditModeColor"
                            android:inputType="text"
                            android:textColor="@color/CardViewTextColor"
...
                            android:layout_height="match_parent"
                            android:text="Lux: "
                            android:textColor="@color/CardViewTextColor"
                            android:textSize="35dp" />

                        <EditText
                            android:id="@+id/editLux"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="140dp"
                            android:background="@color/EditModeColor"
                            android:inputType="text"
                            android:textColor="@color/CardViewTextColor"
...
                            android:layout_height="match_parent"
                            android:text="Temperature: "
                            android:textColor="@color/CardViewTextColor"
                            android:textSize="30dp" />

                        <EditText
                            android:id="@+id/editTemp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="0dp"
                            android:background="@color/EditModeColor"
                            android:inputType="text"
                            android:textColor="@color/CardViewTextColor"
...
                            android:layout_height="match_parent"
                            android:text="Volume: "
                            android:textColor="@color/CardViewTextColor"
                            android:textSize="30dp" />

                        <EditText
                            android:id="@+id/editVolume"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="80dp"
                            android:background="@color/EditModeColor"
                            android:inputType="text"
                            android:textColor="@color/CardViewTextColor"
                            android:textSize="30dp" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/saveBtn"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_gravity="center_vertical"
                        card_view:srcCompat="@drawable/save" />
                </LinearLayout>
            </ScrollView>
...
