...
                            android:layout_height="match_parent"
                            android:text="Name: "
                            android:textColor="@color/CardViewTextColor"
                            android:textSize="35dp" />

                        <EditText
                            android:id="@+id/newName"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="100dp"
                            android:background="@color/EditModeColor"
                            android:inputType="text"
                            android:textColor="@color/CardViewTextColor"
...
                            android:layout_height="match_parent"
                            android:text="Air pressure: "
                            android:textColor="@color/CardViewTextColor"
                            android:textSize="35dp" />

                        <EditText
                            android:id="@+id/newAirp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="8dp"
                            android:background="@color/EditModeColor"
                            android:inputType="text"
                            android:textColor="@color/CardViewTextColor"
...
                            android:layout_height="match_parent"
                            android:text="Humidity: "
                            android:textColor="@color/CardViewTextColor"
                            android:textSize="35dp" />

                        <EditText
                            android:id="@+id/newHum"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="55dp"
                            android:background="@color/EditModeColor"
                            android:inputType="text"
                            android:textColor="@color/CardViewTextColor"
...
                            android:layout_height="match_parent"
                            android:text="Lux: "
                            android:textColor="@color/CardViewTextColor"
                            android:textSize="35dp" />

                        <EditText
                            android:id="@+id/newLux"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="140dp"
                            android:background="@color/EditModeColor"
                            android:inputType="text"
                            android:textColor="@color/CardViewTextColor"
...
                            android:layout_height="match_parent"
                            android:text="Temperature: "
                            android:textColor="@color/CardViewTextColor"
                            android:textSize="35dp" />

                        <EditText
                            android:id="@+id/newTemp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="0dp"
                            android:background="@color/EditModeColor"
                            android:inputType="text"
                            android:textColor="@color/CardViewTextColor"
...
                            android:layout_height="match_parent"
                            android:text="Volume: "
                            android:textColor="@color/CardViewTextColor"
                            android:textSize="35dp" />

                        <EditText
                            android:id="@+id/newVolume"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="80dp"
                            android:background="@color/EditModeColor"
                            android:inputType="text"
                            android:textColor="@color/CardViewTextColor"
                            android:textSize="30dp" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/addBtn"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:onClick="OpenAddModeFragment"
                        card_view:srcCompat="@drawable/save" />
...
