...
        android:layout_marginRight="60dp"
        android:layout_weight="1"
        android:src="@drawable/edit"
        android:visibility="gone" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:text="Title"
...
